[gd_scene load_steps=92 format=3 uid="uid://5b3axso2q6xc"]

[ext_resource type="Script" uid="uid://bv77gi2sw013c" path="res://npc_movement.gd" id="1_0dw2d"]
[ext_resource type="Texture2D" uid="uid://otxon6fk7qn8" path="res://assets/vampires/PNG/Vampires1/With_shadow/Vampires1_Death_with_shadow.png" id="1_p5072"]
[ext_resource type="Texture2D" uid="uid://bp5q3ewnpihe2" path="res://assets/vampires/PNG/Vampires1/With_shadow/Vampires1_Attack_with_shadow.png" id="2_lvqmy"]
[ext_resource type="Texture2D" uid="uid://ch3d4qpf25m74" path="res://assets/vampires/PNG/Vampires1/With_shadow/Vampires1_Idle_with_shadow.png" id="2_wrml7"]
[ext_resource type="Texture2D" uid="uid://busa3td3cle0h" path="res://assets/vampires/PNG/Vampires1/With_shadow/Vampires1_Run_with_shadow.png" id="3_c6ocs"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4eewx"]
atlas = ExtResource("2_lvqmy")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gny11"]
atlas = ExtResource("2_lvqmy")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcjwx"]
atlas = ExtResource("2_lvqmy")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mtn3g"]
atlas = ExtResource("2_lvqmy")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dagvd"]
atlas = ExtResource("2_lvqmy")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xtsqq"]
atlas = ExtResource("2_lvqmy")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6pyt"]
atlas = ExtResource("2_lvqmy")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kcj82"]
atlas = ExtResource("2_lvqmy")
region = Rect2(448, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ol6rp"]
atlas = ExtResource("2_lvqmy")
region = Rect2(512, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_801eo"]
atlas = ExtResource("2_lvqmy")
region = Rect2(576, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_06o4f"]
atlas = ExtResource("2_lvqmy")
region = Rect2(640, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxbet"]
atlas = ExtResource("2_lvqmy")
region = Rect2(704, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kmtf0"]
atlas = ExtResource("2_lvqmy")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0twee"]
atlas = ExtResource("2_lvqmy")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1lpfn"]
atlas = ExtResource("2_lvqmy")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_04kj5"]
atlas = ExtResource("2_lvqmy")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ba65h"]
atlas = ExtResource("2_lvqmy")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3g7g8"]
atlas = ExtResource("2_lvqmy")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vbime"]
atlas = ExtResource("2_lvqmy")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vx4bg"]
atlas = ExtResource("2_lvqmy")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b7f60"]
atlas = ExtResource("2_lvqmy")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0hlk"]
atlas = ExtResource("2_lvqmy")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkqko"]
atlas = ExtResource("2_lvqmy")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yk84v"]
atlas = ExtResource("2_lvqmy")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_45x2h"]
atlas = ExtResource("2_lvqmy")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oeajj"]
atlas = ExtResource("2_lvqmy")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pt4qk"]
atlas = ExtResource("2_lvqmy")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_svned"]
atlas = ExtResource("2_lvqmy")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sb5gk"]
atlas = ExtResource("2_lvqmy")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jxf4j"]
atlas = ExtResource("2_lvqmy")
region = Rect2(320, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_66rjl"]
atlas = ExtResource("2_lvqmy")
region = Rect2(384, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4u87w"]
atlas = ExtResource("2_lvqmy")
region = Rect2(448, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_njorh"]
atlas = ExtResource("2_lvqmy")
region = Rect2(512, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8bbao"]
atlas = ExtResource("2_lvqmy")
region = Rect2(576, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5kkjv"]
atlas = ExtResource("2_lvqmy")
region = Rect2(640, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1qcct"]
atlas = ExtResource("2_lvqmy")
region = Rect2(704, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4nwxf"]
atlas = ExtResource("1_p5072")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xt37c"]
atlas = ExtResource("1_p5072")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bprk2"]
atlas = ExtResource("1_p5072")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gohvf"]
atlas = ExtResource("1_p5072")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nq76p"]
atlas = ExtResource("1_p5072")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n08o8"]
atlas = ExtResource("1_p5072")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8erl"]
atlas = ExtResource("1_p5072")
region = Rect2(384, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdchh"]
atlas = ExtResource("1_p5072")
region = Rect2(448, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oms0p"]
atlas = ExtResource("1_p5072")
region = Rect2(512, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4fo3s"]
atlas = ExtResource("1_p5072")
region = Rect2(576, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7o0mc"]
atlas = ExtResource("1_p5072")
region = Rect2(640, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lvqmy"]
atlas = ExtResource("3_c6ocs")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xpjvf"]
atlas = ExtResource("3_c6ocs")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rwngl"]
atlas = ExtResource("3_c6ocs")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xrk7b"]
atlas = ExtResource("3_c6ocs")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jk4sg"]
atlas = ExtResource("3_c6ocs")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ag7l5"]
atlas = ExtResource("3_c6ocs")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_crtnk"]
atlas = ExtResource("3_c6ocs")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2313g"]
atlas = ExtResource("3_c6ocs")
region = Rect2(448, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0oh70"]
atlas = ExtResource("3_c6ocs")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6igl"]
atlas = ExtResource("3_c6ocs")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hladq"]
atlas = ExtResource("3_c6ocs")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kby8j"]
atlas = ExtResource("3_c6ocs")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_at5un"]
atlas = ExtResource("3_c6ocs")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3gviu"]
atlas = ExtResource("3_c6ocs")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qg16c"]
atlas = ExtResource("3_c6ocs")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7w0n"]
atlas = ExtResource("3_c6ocs")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_smvqj"]
atlas = ExtResource("3_c6ocs")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yo8df"]
atlas = ExtResource("3_c6ocs")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w6c1f"]
atlas = ExtResource("3_c6ocs")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_155v8"]
atlas = ExtResource("3_c6ocs")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tu7fb"]
atlas = ExtResource("3_c6ocs")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ss2xl"]
atlas = ExtResource("3_c6ocs")
region = Rect2(320, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oxor6"]
atlas = ExtResource("3_c6ocs")
region = Rect2(384, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mjlku"]
atlas = ExtResource("3_c6ocs")
region = Rect2(448, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v47dk"]
atlas = ExtResource("2_wrml7")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rasmu"]
atlas = ExtResource("2_wrml7")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_517tf"]
atlas = ExtResource("2_wrml7")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5p23"]
atlas = ExtResource("2_wrml7")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fxj8g"]
atlas = ExtResource("2_wrml7")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_10p00"]
atlas = ExtResource("2_wrml7")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_biac7"]
atlas = ExtResource("2_wrml7")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypuml"]
atlas = ExtResource("2_wrml7")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bw8nl"]
atlas = ExtResource("2_wrml7")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_skpwy"]
atlas = ExtResource("2_wrml7")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xu26w"]
atlas = ExtResource("2_wrml7")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_262lk"]
atlas = ExtResource("2_wrml7")
region = Rect2(192, 128, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_ntcjy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4eewx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gny11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcjwx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mtn3g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dagvd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xtsqq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6pyt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kcj82")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ol6rp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_801eo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_06o4f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxbet")
}],
"loop": false,
"name": &"attack_back",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kmtf0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0twee")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1lpfn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_04kj5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ba65h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3g7g8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vbime")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vx4bg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7f60")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0hlk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkqko")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yk84v")
}],
"loop": false,
"name": &"attack_front",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_45x2h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oeajj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pt4qk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_svned")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sb5gk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jxf4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_66rjl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4u87w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_njorh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8bbao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5kkjv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1qcct")
}],
"loop": false,
"name": &"attack_side",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4nwxf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xt37c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bprk2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gohvf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nq76p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n08o8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8erl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdchh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oms0p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4fo3s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7o0mc")
}],
"loop": false,
"name": &"death_side",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lvqmy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xpjvf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwngl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xrk7b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jk4sg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ag7l5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_crtnk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2313g")
}],
"loop": true,
"name": &"flight_back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0oh70")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v6igl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hladq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kby8j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_at5un")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3gviu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qg16c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7w0n")
}],
"loop": true,
"name": &"flight_front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_smvqj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yo8df")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w6c1f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_155v8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tu7fb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ss2xl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oxor6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mjlku")
}],
"loop": true,
"name": &"flight_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v47dk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rasmu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_517tf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5p23")
}],
"loop": true,
"name": &"idle_back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fxj8g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_10p00")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_biac7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypuml")
}],
"loop": true,
"name": &"idle_front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bw8nl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_skpwy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xu26w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_262lk")
}],
"loop": true,
"name": &"idle_side",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gxc8i"]

[sub_resource type="CircleShape2D" id="CircleShape2D_c6ocs"]
radius = 256.0078

[node name="vampire_spawn" type="CharacterBody2D"]
texture_filter = 1
collision_layer = 3
collision_mask = 3
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_0dw2d")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ntcjy")
animation = &"attack_side"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_gxc8i")

[node name="DetectionArea" type="Area2D" parent="."]

[node name="DetectionZone" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_c6ocs")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 4.0
target_desired_distance = 8.0
navigation_layers = 3

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
